@@ -46,40 +46,6 @@ public class LuceneQParserPlugin extends QParserPlugin {
   }
 }
 
-class LuceneQParser extends QParser {
-  SolrQueryParser lparser;
-
-  public LuceneQParser(String qstr, SolrParams localParams, SolrParams params, SolrQueryRequest req) {
-    super(qstr, localParams, params, req);
-  }
-
-
-  @Override
-  public Query parse() throws SyntaxError {
-    String qstr = getString();
-    if (qstr == null || qstr.length()==0) return null;
-
-    String defaultField = getParam(CommonParams.DF);
-    if (defaultField==null) {
-      defaultField = getReq().getSchema().getDefaultSearchFieldName();
-    }
-    lparser = new SolrQueryParser(this, defaultField);
-
-    lparser.setDefaultOperator
-      (QueryParsing.getQueryParserDefaultOperator(getReq().getSchema(), 
-                                                  getParam(QueryParsing.OP)));
-
-    return lparser.parse(qstr);
-  }
-
-
-  @Override
-  public String[] getDefaultHighlightFields() {
-    return lparser == null ? new String[]{} : new String[]{lparser.getDefaultField()};
-  }
-  
-}
-
 
 class OldLuceneQParser extends LuceneQParser {
   String sortStr;
